Add Emitter implementation

--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
     "url": "https://github.com/linhpvt/node/issues"
   },
   "homepage": "https://github.com/linhpvt/node#readme",
-  "type": "module"
+  "type": "commonjs"
 }
