function constructor, inherits function and .call in prototypal inheritance

--- a/package.json
+++ b/package.json
@@ -16,6 +16,5 @@
   "bugs": {
     "url": "https://github.com/linhpvt/node/issues"
   },
-  "homepage": "https://github.com/linhpvt/node#readme",
-  "type": "commonjs"
+  "homepage": "https://github.com/linhpvt/node#readme"
 }
