--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/linhpvt/node/issues"
   },
-  "homepage": "https://github.com/linhpvt/node#readme"
+  "homepage": "https://github.com/linhpvt/node#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1"
+  }
 }
